Add OG preview image and meta tags

--- a/index.html
+++ b/index.html
@@ -6,6 +6,15 @@
   <meta name="description" content="Elliott Luftman - Cybersecurity &amp; AI/ML Engineer, USC junior studying Intelligence and Cyber Operations.">
   <title>Elliott Luftman</title>
 
+  <!-- Open Graph / Link Preview -->
+  <meta property="og:title" content="Elliott Luftman">
+  <meta property="og:description" content="Cybersecurity & AI/ML Engineer - USC Intelligence & Cyber Operations">
+  <meta property="og:image" content="https://elliottluftman.github.io/images/preview.png">
+  <meta property="og:url" content="https://elliottluftman.github.io">
+  <meta property="og:type" content="website">
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:image" content="https://elliottluftman.github.io/images/preview.png">
+
   <!-- Google Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
